tests/should_fail/let_destructure_or_pattern.nv
module test
// let destructure with OR pattern (not allowed in let destructuring)
let (a | b) = 42
